[package]
name = "winreg2"
description = "A safe wrapper for the Windows Registry API"
version = "1.0.0-alpha.1"
authors = ["Brendan Molloy <brendan@bbqsrc.net>"]
edition = "2018"
license = "MIT OR Apache-2.0"

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
targets = [
    "x86_64-pc-windows-msvc",
    "i686-pc-windows-msvc",
    "x86_64-pc-windows-gnu",
    "i686-pc-windows-gnu",
]

[dependencies]
bitflags = "1.2.1"
log = "0.4.8"
thiserror = "1.0.20"
widestring = "0.4.2"

[dependencies.winapi]
version = "0.3.8"
features = [
    "winerror",
    "winreg",
]
