[package]
name = "registry"
description = "A safe wrapper for the Windows Registry API"
version = "1.2.2"
authors = ["Brendan Molloy <brendan@bbqsrc.net>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/bbqsrc/registry-rs"
categories = ["api-bindings", "os", "os::windows-apis"]
keywords = ["windows", "registry", "win32", "winapi", "winreg"]

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
targets = [
    "x86_64-pc-windows-msvc",
    "i686-pc-windows-msvc",
    "x86_64-pc-windows-gnu",
    "i686-pc-windows-gnu",
]

[dependencies]
bitflags = "1.2.1"
log = "0.4.11"
thiserror = "1.0.20"
utfx = "0.1"

[dependencies.winapi]
version = "0.3.9"
features = [
    "winerror",
    "winreg",
    "processthreadsapi",
    "winnt",
    "winbase",
    "securitybaseapi",
    "ntdef",
]
